--- a/package.json
+++ b/package.json
@@ -11,6 +11,12 @@
     "license": "ISC",
     "description": "",
     "devDependencies": {
-        "parcel": "^2.12.0"
+        "autoprefixer": "^10.4.20",
+        "parcel": "^2.12.0",
+        "postcss": "^8.4.47",
+        "tailwindcss": "^3.4.13"
+    },
+    "dependencies": {
+        "leaflet": "^1.9.4"
     }
 }
